@@ -20,6 +20,7 @@ import org.springframework.context.ApplicationEventPublisherAware;
 import org.springframework.context.event.EventListener;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * nacos 的 spring 事件管理器
@@ -97,7 +98,7 @@ public class NacosSpringEventManager implements ApplicationEventPublisherAware, 
                 .values()
                 .stream()
                 .flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
 
         for (NacosServiceEventListener sel : listeners) {
 
@@ -181,7 +182,7 @@ public class NacosSpringEventManager implements ApplicationEventPublisherAware, 
                     List<NacosServiceListenerValidator> validators = nacosServiceListenerValidators
                             .stream()
                             .filter(v -> v.isSupport(nacosService))
-                            .toList();
+                            .collect(Collectors.toList());
 
                     boolean isContinue = false;
 
