@@ -23,10 +23,7 @@ import org.springframework.util.Assert;
 
 import java.sql.Date;
 import java.time.Instant;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -58,7 +55,7 @@ public class MongoAuditEventRepository implements PluginAuditEventRepository {
         this.indexGenerator = new DateIndexGenerator(
                 indexName,
                 Casts.UNDERSCORE,
-                List.of(RestResult.DEFAULT_TIMESTAMP_NAME, NumberIdEntity.CREATION_TIME_FIELD_NAME)
+                Arrays.asList(RestResult.DEFAULT_TIMESTAMP_NAME, NumberIdEntity.CREATION_TIME_FIELD_NAME)
         );
     }
 
