@@ -12,6 +12,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * 名称枚举的反序列化实现
@@ -32,14 +33,14 @@ public class NameEnumDeserializer<T extends NameEnum> extends JsonDeserializer<T
         List<NameEnum> valueEnums = Arrays
                 .stream(type.getEnumConstants())
                 .map(v -> Casts.cast(v, NameEnum.class))
-                .toList();
+                .collect(Collectors.toList());
 
         Optional<NameEnum> optional = valueEnums
                 .stream()
                 .filter(v -> v.getName().equals(nodeValue))
                 .findFirst();
 
-        if (optional.isEmpty()) {
+        if (!optional.isPresent()) {
             optional = valueEnums
                     .stream()
                     .filter(v -> v.toString().equals(nodeValue))
