@@ -16,6 +16,7 @@ import org.springframework.util.ReflectionUtils;
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 值于名称枚举的反序列化实现
@@ -37,21 +38,21 @@ public class NameValueEnumDeserializer<T extends NameValueEnum> extends JsonDese
         List<NameValueEnum> valueEnums = Arrays
                 .stream(type.getEnumConstants())
                 .map(v -> Casts.cast(v, NameValueEnum.class))
-                .toList();
+                .collect(Collectors.toList());
 
         Optional<NameValueEnum> optional = valueEnums
                 .stream()
                 .filter(v -> v.toString().equals(nodeValue))
                 .findFirst();
 
-        if (optional.isEmpty()) {
+        if (!optional.isPresent()) {
             optional = valueEnums
                     .stream()
                     .filter(v -> v.getName().equals(nodeValue))
                     .findFirst();
         }
 
-        if (optional.isEmpty()) {
+        if (optional.isPresent()) {
 
             optional = valueEnums
                     .stream()
