@@ -12,6 +12,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * 值枚举的反序列化实现
@@ -33,14 +34,14 @@ public class ValueEnumDeserializer<T extends ValueEnum> extends JsonDeserializer
         List<ValueEnum> valueEnums = Arrays
                 .stream(type.getEnumConstants())
                 .map(v -> Casts.cast(v, ValueEnum.class))
-                .toList();
+                .collect(Collectors.toList());
 
         Optional<ValueEnum> optional = valueEnums
                 .stream()
                 .filter(v -> v.getValue().toString().equals(nodeValue))
                 .findFirst();
 
-        if (optional.isEmpty()) {
+        if (!optional.isPresent()) {
             optional = valueEnums
                     .stream()
                     .filter(v -> v.toString().equals(nodeValue))
