@@ -14,6 +14,7 @@ import java.beans.PropertyDescriptor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 抽象对象字段或属性的 json 集合类，用于实现在 orm 对象中，有引用范型集合的字段或属性时的特殊映射，
@@ -55,7 +56,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
         for (Object o : collection) {
 
             Optional<Class<?>> optional = map.keySet().stream().filter(t -> t.isAssignableFrom(o.getClass())).findFirst();
-            if (optional.isEmpty()) {
+            if (!optional.isPresent()) {
                 continue;
             }
 
@@ -71,7 +72,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
                     .stream()
                     .map(v -> doMappingResult(v, entry.getKey(), map.get(entry.getKey())))
                     .filter(Objects::nonNull)
-                    .toList();
+                    .collect(Collectors.toList());
             newResult.addAll(mapValues);
         }
 
@@ -85,7 +86,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
         return Arrays
                 .stream(propertyDescriptors)
                 .filter(p -> this.getJsonCollectionGenericType(p, targetClass) != null)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     protected JsonCollectionGenericType getJsonCollectionGenericType(PropertyDescriptor propertyDescriptor, Class<?> targetClass) {
